testsuite/tests/checks/default_values_for_record_components/test.out
default_values_for_record_components.ads:3:7: error: default values for record components
3 |       I : Integer := 0;                    -- FLAG
  |       ^ 

default_values_for_record_components.ads:8:13: error: default values for record components
8 |             C : Character := 'A';          -- FLAG
  |             ^ 

